kubernetes/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n

spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: n8n

    spec:
      restartPolicy: Always
      containers:
        - name: n8n
          image: n8nio/n8n
          command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start

          startupProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 10

          ports:
            - containerPort: 5678

          resources:
            requests:
              cpu: "250m"
              memory: "500Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-volume

      volumes:
        - name: n8n-volume
          persistentVolumeClaim:
            claimName: n8n-pvc
        - name: n8n-secret
          secret:
            secretName: n8n-secret
        - name: postgres-secret
          secret:
            secretName: postgres-secret
