kubernetes/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: n8n

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5678
      targetPort: 5678
      protocol: TCP
  selector:
    app: n8n
